tests/ui/contracts/error/has-expr-argument.rs
use http_tracing_attributes::contracts;

#[contracts(true)]
fn f() {}

fn main() {}
