tests/ui/contracts/error/has-expr-argument.stderr
error: this attribute takes no arguments

         = help: use `#[contracts]`

 --> tests/ui/contracts/error/has-expr-argument.rs:3:13
  |
3 | #[contracts(true)]
  |             ^^^^
